# bevy-rpg

./: .clippy.toml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
assets/db/: skillbook.json  skillbook.yaml  skillbook_schema.json
schemas/: skillbook_schema.json
src/: macros.rs  main.rs
src/combat/: ai.rs  eval.rs  mod.rs  process.rs  setup.rs
src/combat/tests/: eval.rs
src/ecs/: component.rs  custom_trait.rs  error.rs  mod.rs  resource.rs  traits.rs
src/environment/: mod.rs
src/game/: bundle.rs  component.rs  mod.rs
src/game/math/: mod.rs
src/game/sprites/: mod.rs
src/menu/: mod.rs  style.rs
src/skills/: mod.rs  parser.rs
src/ui/: combat.rs  env.rs  mod.rs  style.rs
