[package]
name = "othirpg"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.0", features = ["dynamic"] }
bevy-inspector-egui = "0.14.0"
bevy_mod_debugdump = "0.6.0"
iyes_loopless = "0.9.1"
rand = "0.8.5"
serde = "1.0.147"
serde_json = "1.0.88"
serde_yaml = "0.9.14"
